[package]
name = "kismet-cache"
description = "A bounded multiprocess cache of files on disk."
version = "0.1.0"
authors = ["Paul Khuong <pvk@pvk.ca>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pkhuong/kismet-cache"

[dependencies]
derivative = "2"
extendhash = "1"
filetime = "0.2"
rand = "0.8"
tempfile = "3"

[dev-dependencies]
proptest = "1"
proptest-derive = "0.3"
test_dir = "0.1"
